# diff_drive_robot_ROS

./: .gitignore  README.md
src/robot_controller_pkg/: CMakeLists.txt  package.xml
src/robot_controller_pkg/config/: config.rviz  joint_controller_cdc.yaml
src/robot_controller_pkg/launch/: display.launch  gazebo.launch  spawn_robot_w_controller.launch
src/robot_controller_pkg/meshes/: base_link.STL  left_caster_wheel_link.STL  left_wheel_link.STL  right_caster_wheel_link.STL  right_wheel_link.STL
src/robot_controller_pkg/urdf/: cdc.csv  cdc.urdf
